--- a/pages/abrir-conta-form.html
+++ b/pages/abrir-conta-form.html
@@ -55,7 +55,7 @@
         <section class="formulario">
             <div class="formulario__container">
                 <img src="../img/status-1.png" alt="Etapa um de três" class="formulario__etapas">
-                <h2 class="formulario__titulo-texto">Preencha os campos abaixo para criar sua Rendimento CDI!</h2>
+                <h2 class="formulario__titulo-texto">Preencha os campos abaixo para criar sua conta!</h2>
             </div>
 
             <form class="principal__formulario" data-formulario>
